# local-mood-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
extended_history/: README.md
src/local_mood_mcp/: __init__.py  auth.py  config.py  discover.py  history.py  models.py  moods.py  playback.py  playlists.py  server.py  spotify_client.py  store.py  tokenstore.py
src/spotify_mood_mcp/: __init__.py  auth.py  config.py  history.py  models.py  moods.py  playback.py  playlists.py  server.py  spotify_client.py  store.py  tokenstore.py
tests/: test_annotations.py  test_compare.py  test_discover.py  test_history.py  test_moods.py  test_playback.py
