[project]
name = "local-mood-mcp"
version = "0.1.0"
description = "Deterministic, mood-based Spotify playlist generator and playback controller exposed as an MCP server. Built for the post-2024 Spotify Web API (no audio-features / recommendations)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "keyring>=25",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
local-mood-mcp = "local_mood_mcp.server:main"
local-mood-auth = "local_mood_mcp.auth:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/local_mood_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
